--- a/package.json
+++ b/package.json
@@ -10,16 +10,28 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@babel/preset-env": "^7.1.6",
+    "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/drawer": "^6.5.6",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
+    "@reduxjs/toolkit": "^1.9.5",
+    "crypto": "^1.0.1",
     "react": "18.1.0",
     "react-native": "0.70.3",
     "react-native-gesture-handler": "^2.8.0",
+    "react-native-maps": "^1.7.1",
+    "react-native-maps-directions": "^1.9.0",
+    "react-native-phone-call": "^1.2.0",
     "react-native-reanimated": "^2.13.0",
     "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.18.2"
+    "react-native-screens": "^3.18.2",
+    "react-redux": "^8.0.7",
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.2",
+    "typescript": "^2.9.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
